--- a/src/qt/res/css/drkblue.css
+++ b/src/qt/res/css/drkblue.css
@@ -40,14 +40,14 @@ color:#333;
 }
 
 QToolBar {
-background-color:#3398CC;
+background-color:#7433cc;
 border:0px solid #000;
 padding:0;
 margin:0;
 }
 
 QToolBar > QToolButton {
-background-color:#3398CC;
+background-color:#7433cc;
 border:0px solid #333;
 min-height:2.5em;
 padding: 0em 1em;
